# setupxinyminutes

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: go.Dockerfile  go.md  index.md  python.Dockerfile  python.md  template.md
