[tool.poetry]
name = "setupxinyminutes"
version = "0.1.0"
description = ""
authors = ["Stefan Otte <stefan.otte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
